package com.polarstar.gofpattern.behavior.command;

/**
 * Created by zhangxuegang on 2016/5/10.
 *<p><p/>
 * 类图生成参考文件
 * http://translate.plantuml.com/zh?n=classes
 */
public interface Command {
    public void excute();
}
