package com.polarstar.gofpattern.behavior.command;

/**
 * 命令接收者 Created by zhangxuegang on 2016/5/10.
 */
public class Receiver {

    public Receiver() {
        super();
    }

    public void action() {
        System.out.println("接收者接收到命令，开始行动");
    }
}
