@startuml

'文档参考 @link http://zh.plantuml.com/classes.html 类图
'UML类图的关联关系
'泛化关系 extends
'实现关系 implement
'依赖关系 单向，类A使用了类B
'关联关系 使一个类知道另一个类的属性和方法
'关联又细化为【聚合和组合】
’依赖关联的强弱关系：组合>聚合>关联>依赖

package "command pattern" #DDDDDD {

Command <|-- ConcreteCommand
Command --o Invoker
ConcreteCommand --> Receiver
client ..> Invoker
client ..> ConcreteCommand

}

interface Command {

'抽象与静态{abstract} 定义可访问性 + - # ~
+ {abstract} execute()
}

class ConcreteCommand {
- Receiver reveiver
+ execute()
}

 note bottom : receiver.action();

class Invoker {
Command command
+ call()
}

class Receiver {
+ void action()
}

class client


@enduml